Add dotenv, flask-wtf

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ flake8 = "*"
 [packages]
 requests = ">=2.20.0"
 flask = ">=1.0.0"
+flask-wtf = "*"
+dotenv-python = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
